# TensorRT-Edge-LLM

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt
cpp/builder/: audioBuilder.cpp  audioBuilder.h  builderUtils.cpp  builderUtils.h  llmBuilder.cpp  llmBuilder.h  visualBuilder.cpp  visualBuilder.h
cpp/common/: bindingNames.h  checkMacros.h  cudaMacros.h  cudaUtils.h  fileUtils.cpp  fileUtils.h  hashUtils.h  inputLimits.h  logger.h  mathUtils.h  mmapReader.cpp  mmapReader.h  safetensorsUtils.cpp  safetensorsUtils.h  stringUtils.cpp  stringUtils.h  tensor.cpp  tensor.h  tensorUtils.cpp  trtUtils.cpp  trtUtils.h  version.cpp  version.h
cpp/kernels/common/: vectorizedTypes.cuh
cpp/kernels/contextAttentionKernels/: contextFMHARunner.cpp  contextFMHARunner.h  cuteDslFMHARunner.cpp  cuteDslFMHARunner.h  fmhaParams_v2.h  utilKernels.cu  utilKernels.h
cpp/kernels/contextAttentionKernels/cubin/: fmha_cubin.h  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm121.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm80.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm86.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm87.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_128_sm89.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm121.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm80.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm86.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm87.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_128_sm89.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm121.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm80.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm86.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm87.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_128_sm89.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm121.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm80.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm86.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm87.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_64_sm89.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_72_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_72_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_72_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_32_S_q_k_v_72_sm121.cubin.cpp  (+28 more)
cpp/kernels/decodeAttentionKernels/: decoderXQARunner.cpp  decoderXQARunner.h
cpp/kernels/embeddingKernels/: embeddingKernels.cu  embeddingKernels.h
cpp/kernels/int4GroupwiseGemmKernels/: dequantize.cuh  int4GroupwiseGemm.h  int4WoQGemvCuda.cu  int4WoqGemmCuda.cu
cpp/kernels/kvCacheUtilKernels/: kvCacheUtilsKernels.cu  kvCacheUtilsKernels.h
cpp/kernels/mamba/: causalConv1d.cu  causalConv1d.h  common.cuh  conversion.cuh  selectiveStateUpdate.cu  selectiveStateUpdate.h
cpp/kernels/moe/: moeActivationKernels.cu  moeActivationKernels.h  moeAlignSumKernels.cu  moeAlignSumKernels.h  moeMarlinIndicesKernels.cu  moeMarlinIndicesKernels.h  moeTopkSoftmaxKernels.cu  moeTopkSoftmaxKernels.h
cpp/kernels/posEncoding/: applyRopeWriteKV.cu  applyRopeWriteKV.h  initializeCosSinCache.cu  initializeCosSinCache.h
cpp/kernels/preprocessKernels/: imageUtilKernels.cu  imageUtilKernels.h
cpp/kernels/speculative/: batchEvictKernels.cu  batchEvictKernels.h  eagleAcceptKernels.cu  eagleAcceptKernels.h  eagleUtilKernels.cu  eagleUtilKernels.h
cpp/kernels/talkerMLPKernels/: talkerMLPKernels.cu  talkerMLPKernels.h
cpp/multimodal/: audioRunner.cpp  audioRunner.h  audioUtils.cpp  audioUtils.h  code2WavRunner.cpp  code2WavRunner.h  imageUtils.cpp  imageUtils.h  internViTRunner.cpp  internViTRunner.h  modelTypes.h  multimodalRunner.cpp  multimodalRunner.h  phi4mmViTRunner.cpp  phi4mmViTRunner.h  qwenViTRunner.cpp  qwenViTRunner.h
cpp/plugins/attentionPlugin/: attentionPlugin.cpp  attentionPlugin.h
cpp/plugins/int4GroupwiseGemmPlugin/: int4GroupwiseGemmPlugin.cpp  int4GroupwiseGemmPlugin.h
cpp/plugins/int4MoePlugin/: int4MoePlugin.cpp  int4MoePlugin.h
cpp/plugins/mamba/: causalConv1dPlugin.cpp  causalConv1dPlugin.h  mambaPlugin.cpp  mambaPlugin.h
cpp/plugins/utils/: pluginUtils.cpp  pluginUtils.h
cpp/plugins/vitAttentionPlugin/: vitAttentionPlugin.cpp  vitAttentionPlugin.h
cpp/profiling/: layerProfiler.cpp  layerProfiler.h  metrics.h  nvtx_wrapper.h  timer.cpp  timer.h
cpp/runtime/: audioUtils.h  eagleDraftEngineRunner.cpp  eagleDraftEngineRunner.h  imageUtils.cpp  imageUtils.h  linearKVCache.cpp  linearKVCache.h  llmEngineRunner.cpp  llmEngineRunner.h  llmInferenceRuntime.cpp  llmInferenceRuntime.h  llmInferenceSpecDecodeRuntime.cpp  llmInferenceSpecDecodeRuntime.h  llmRuntimeUtils.cpp  llmRuntimeUtils.h  qwen3OmniTTSRuntime.cpp  qwen3OmniTTSRuntime.h
cpp/sampler/: sampling.h
cpp/tokenizer/: preTokenizer.cpp  tokenEncoder.cpp  tokenizer.cpp  tokenizer.h  tokenizerUtils.cpp  tokenizerUtils.h  unicodeData.cpp  unicodeData.h
examples/omni/: CMakeLists.txt  qwen3_tts_inference.cpp
(+172 files in other folders)
